<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014 SlimRoms Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- General strings -->

    <string name="dlg_ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="reset_message">Reset all entries to default?</string>
    <string name="group_applications">Applications</string>
    <string name="select_custom_app_title">Select custom application</string>
    <string name="gestures_dashboard_summary">Gestures for Realme</string>
    <string name="enable_gestures_title">Enable gestures</string>
    <string name="enable_gestures_summary">Enable screen off gestures</string>
    <string name="gestures_title">Gestures</string>
    <string name="gesture_m_title">Gesture M</string>	
    <string name="gesture_w_title">Gesture W</string>
    <string name="gesture_double_tap_title">Gesture Double Tap</string>
    <string name="gesture_circle_title">Gesture Circle</string>
    <string name="gesture_two_swipe_title">Gesture Two Swipe</string>
    <string name="gesture_up_arrow_title">Gesture Up Arrow</string>
    <string name="gesture_down_arrow_title">Gesture Down Arrow</string>
    <string name="gesture_left_arrow_title">Gesture Left Arrow</string>
    <string name="gesture_right_arrow_title">Gesture Right Arrow</string>
    <string name="gesture_up_title">Gesture Swipe Up</string>
    <string name="gesture_down_title">Gesture Swipe Down</string>
    <string name="gesture_left_title">Gesture Swipe Left</string>
    <string name="gesture_right_title">Gesture Swipe Right</string>
    <string name="kharameparts">KharaMeParts</string>
    <string name="kharameparts_summary">Gestures and Tweaks for KharaMe(Realme)</string>
    <string name="screen_off_gestures">Screen-off gestures</string>
    <string name="gestures">Gestures</string>

    <!-- Ambient Display -->
    <string name="ambient_display_title">Ambient display</string>
    <string name="ambient_display_enable_title">Ambient display</string>
    <string name="ambient_display_enable_summary">Wake screen when you receive notifications</string>
    <string name="ambient_display_gestures_title">Ambient display gestures</string>
    <string name="ambient_display_gestures_summary">Additional gestures to wake the screen</string>
    <string name="ambient_display_summary">Wake screen when you receive notifications</string>
    <string name="ambient_display_summary_on">Screen will wake when you receive notifications</string>
    <string name="ambient_display_summary_off">Screen will not wake when you receive notifications</string>

    <!-- Pickup sensor -->
    <string name="pickup_sensor_title">Pickup sensor</string>

    <!-- Pick-up gesture -->
    <string name="pick_up_gesture_title">Pick-up</string>
    <string name="pick_up_gesture_summary">Pulse notifications on pick-up</string>

    <!-- Label for feature switch  -->
    <string name="switch_bar_on">On</string>

    <!-- Label for feature switch -->
    <string name="switch_bar_off">Off</string>

    <!-- Device specific settings -->
    <string name="device_settings_app_name">Advanced settings</string>

    <!-- Device gestures panel -->
    <string name="screen_gestures_panel_title">Gestures</string>

    <!-- Ambient gesture haptic feedback -->
    <string name="ambient_gesture_haptic_feedback">Haptic feedback</string>
    <string name="ambient_gesture_haptic_feedback_summary">Vibrate when a Ambient gesture is detected</string>

    <!-- Touchscreen gesture haptic feedback -->
    <string name="touchscreen_gesture_haptic_feedback">Haptic feedback</string>
    <string name="touchscreen_gesture_haptic_feedback_summary">Vibrate when a Touchscreen gesture is detected</string>

    <!-- Kcal -->
    <string name="kcal">Display</string>
    <string name="kcal_title">Display color control</string>
    <string name="kcal_summary">Display color calibration using KCAL</string>
    <string name="kcal_enabled_title">Enable KCAL</string>
    <string name="kcal_enabled_summary">Turn on display calibration using KCAL</string>
    <string name="kcal_red">Red</string>
    <string name="kcal_green">Green</string>
    <string name="kcal_blue">Blue</string>
    <string name="kcal_saturation">Saturation</string>
    <string name="kcal_contrast">Constrast</string>
    <string name="menu_reset">Reset</string>
    <string name="kcal_color_temp">Color temperature (K)</string>

    <string name="kcal_greyscale_title">Greyscale</string>
    <string name="kcal_greyscale_summary">Fully disable saturation</string>
    <string name="presets_list_title">Load KCAL preset</string>
    <string name="default_values">Default</string>
    <string name="version_1">Version 1</string>
    <string name="version_2">Version 2</string>
    <string name="version_3">Version 3</string>
    <string name="triluminous">Triluminous</string>
    <string name="deep_black_and_white">Deep Black and White</string>
    <string name="deep_natural">Deep Natural</string>
    <string name="cool_amoled">Cool Amoled</string>
    <string name="extreme_amoled">Extreme Amoled</string>
    <string name="warm_amoled">Warm Amoled</string>
    <string name="hybrid_mamba">Hybrid Mamba</string>
    <string name="kcal_hue">Hue</string>
    <string name="kcal_value">Value</string>

    <!-- Vibration Slider -->
    <string name="misc_tweaks">Misc Tweaks</string>
    <string name="category_misc">Misc</string>
    <string name="vibrator_intensity_control">Vibration Intensity Control</string>
    <string name="vibration_slider"></string>

</resources>
