<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/gestures">

        <PreferenceScreen
                android:key="screen_gestures"
                android:fragment="com.kharame.kharameparts.settings.ScreenOffGestureSettings"
                android:summary="@string/gestures_dashboard_summary"
                android:icon="@drawable/ic_gesture"
                android:title="@string/screen_off_gestures" />

    </PreferenceCategory>
	
	
	<PreferenceCategory
            android:title="@string/ambient_display_title">

        <PreferenceScreen
                android:key="ambient_display_gestures"
                android:fragment="com.kharame.kharameparts.gestures.AmbientGesturePreferenceActivity"
                android:summary="@string/ambient_display_gestures_summary"
                android:icon="@drawable/ic_doze"
                android:title="@string/ambient_display_gestures_title" />

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/kcal">
         <PreferenceScreen
                android:key="kcal"
                android:fragment="com.lineageos.settings.lepref.DisplayCalibration"
                android:summary="@string/kcal_summary"
                android:icon="@drawable/ic_kcal"
                android:title="@string/kcal_title" />
     </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/category_misc">

        <PreferenceScreen
                android:key="vibration"
                android:fragment="com.kharame.kharameparts.vibration.VibrationActivity"
                android:title="@string/misc_tweaks"	    
            android:icon="@drawable/ic_vibrate" />
    </PreferenceCategory>
</PreferenceScreen>
